fix initial layout issues on search

--- a/src/app/modules/main-toolbar/main-toolbar.component.scss
+++ b/src/app/modules/main-toolbar/main-toolbar.component.scss
@@ -45,9 +45,11 @@ app-toolbar-search{
 }
 @keyframes example {
     from {
-        transform:scale(0,1);
+        //transform:scale(0,1);
+        opacity:0;
     }
     to {
-        transform:scale(1,1);
+        //transform:scale(1,1);
+        opacity: 1;
     }
   }
